# ChangeLog for net-misc/nxserver-personal
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/nxserver-personal/ChangeLog,v 1.17 2005/05/23 18:57:23 stuart Exp $

*nxserver-personal-1.4.0-r3 (23 May 2005)

  23 May 2005; Stuart Herbert <stuart@gentoo.org>
  +nxserver-personal-1.4.0-r3.ebuild:
  Version bump to pick up changes in eclass; adds blocker on nxserver-freenx
  Thanks to bug #91770

*nxserver-personal-1.4.0-r2 (30 Apr 2005)

  30 Apr 2005; Stuart Herbert <stuart@gentoo.org>
  +nxserver-personal-1.4.0-r2.ebuild:
  Version bump

  30 Apr 2005; Stuart Herbert <stuart@gentoo.org> :
  Version bump

*nxserver-personal-1.4.0-r1 (02 Jan 2005)

  02 Jan 2005; Stuart Herbert <stuart@gentoo.org>
  +nxserver-personal-1.4.0-r1.ebuild:
  Version bump

*nxserver-personal-1.4.0 (30 Aug 2004)

  30 Aug 2004; Stuart Herbert <stuart@gentoo.org>
  +nxserver-personal-1.4.0.ebuild:
  Added snapshot 4 of the next version of NX Server

*nxserver-personal-1.3.2-r1 (20 Jul 2004)

  20 Jul 2004; Stuart Herbert <stuart@gentoo.org>
  +nxserver-personal-1.3.2-r1.ebuild:
  Version bump; moved dep on nxclient from the ebuild after user complaints that
  the dep was being ignored

*nxserver-personal-1.3.2 (13 May 2004)

  13 May 2004; Stuart Herbert <stuart@gentoo.org>
  nxserver-personal-1.2.2-r1.ebuild, nxserver-personal-1.2.2-r2.ebuild,
  nxserver-personal-1.2.2.ebuild, nxserver-personal-1.3.0-r1.ebuild,
  nxserver-personal-1.3.0.ebuild, nxserver-personal-1.3.0_beta2.ebuild,
  nxserver-personal-1.3.2.ebuild, files/1.2.2/50nxserver:
  Version bump; removed old versions

*nxserver-personal-1.2.2-r1 (10 Mar 2004)

  10 Mar 2004; Stuart Herbert <stuart@gentoo.org>
  nxserver-personal-1.2.2-r1.ebuild, nxserver-personal-1.2.2-r2.ebuild,
  nxserver-personal-1.2.2.ebuild, nxserver-personal-1.3.0-r1.ebuild,
  nxserver-personal-1.3.0.ebuild, nxserver-personal-1.3.0_beta2.ebuild:
  Changed date in the header, to shut repoman up
