@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/nxserver-personal
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/nxserver-personal/ChangeLog,v 1.17 2005/05/23 18:57:23 stuart Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/nxserver-personal/ChangeLog,v 1.18 2006/04/30 18:11:17 stuart Exp $
+
+*nxserver-personal-1.5.0 (30 Apr 2006)
+
+  30 Apr 2006; Stuart Herbert <stuart@gentoo.org>
+  +nxserver-personal-1.5.0.ebuild:
+  Version bump; thanks to Jon Scruggs for the ebuild
 
 *nxserver-personal-1.4.0-r3 (23 May 2005)
 
